third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/liveness/trailing_semi_loops.exp
module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
    public entry fun <SELF>_0() {
        loop continue
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_1 {
    public entry fun <SELF>_1() {
        loop continue
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_2 {
    public entry fun <SELF>_2(cond: bool) {
        if (!cond) abort 0;
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_3 {
    public entry fun <SELF>_3() {
        loop continue
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_4 {
    public entry fun <SELF>_4() {
        ()
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_5 {
    public entry fun <SELF>_5() {
        ()
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_6 {
    public entry fun <SELF>_6(cond: bool) {
        while (!cond) continue;
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_7 {
    public entry fun <SELF>_7(cond: bool) {
        while (cond) continue;
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_8 {
    public entry fun <SELF>_8(cond: bool) {
        if (cond) abort 0;
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_9 {
    public entry fun <SELF>_9(cond: bool) {
        while (!cond) continue;
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_10 {
    public entry fun <SELF>_10(cond: bool) {
        while (!cond) continue;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ trailing_semi_loops.move:1:76
  │
1 │ module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
  │                                                                            ^
  │                                                                            │
  │                                                                            Unexpected '<'
  │                                                                            Expected an identifier
